Sensor test